--- a/inst/www/style.css
+++ b/inst/www/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 /* Change text to imported font */
-h1, h2, body {
+body * {
   font-family: "Open Sans", sans-serif;
 }
 
